[project]
name = "computer-use-preview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browserbase==1.3.0",
    "google-genai>=1.40.0",
    "langfuse>=3.6.2",
    "openai>=2.3.0",
    "openinference-instrumentation-google-genai>=0.1.8",
    "playwright==1.52.0",
    "pydantic==2.11.4",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "termcolor==3.1.0",
]
